# iSea

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
archives/: .gitignore
archives/crawler/: README.md
archives/isea_browser/static/css/: style.css
archives/isea_browser/static/js/: plotly_click.js
archives/isea_browser/templates/: index.html  layout.html  select_method.html  simple_graph.html
archives/isea_browser_streamlit/: config.ini  sample.py
archives/utls/: README.md  canny_edge.py  color_hist.py  make_annoy_db.py
configs/: config.ini
crawler/: img_crawler.py  shikyo_crawler.py
isea_browser/: isea.py  myfunc.py
isea_browser/static/js/: script.js
isea_browser/templates/: img_details.html  select_species.html  simple_plotly_graph.html
isea_browser_streamlit/: isea.py  isea_dashboard.py
scraper/: img_crawler.py  main.py  shikyo_crawler.py  shikyo_monthly_urls_dict.pkl  suion_crawler.py  suion_daily_urls_dict.pkl  suion_monthly_urls_dict.pkl
src/clawler/: main.py
src/init/: main.py
src/sqls/: init_shikyo_table.sql  init_suion_table.sql
src/sqls/info/: er.md
utls/: README.md  make_annoy_db.py  super_pixcel.py
